--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Математический тест</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <header>
@@ -47,6 +47,6 @@
 
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
-    <script src="/script.js"></script>
+    <script src="./script.js"></script>
 </body>
 </html>
